Tried to tweak address bar height issue on mobile browser.

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,16 @@
+html {
+    overflow: hidden;
+    width: 100%;
+}
 
 body{
     font-family: Poppins-Regular;
+    height: 100%;
+    position: fixed;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 }
+
 @font-face {
     font-family: Poppins-Regular;
     src: url(../fonts/Poppins-Regular.ttf);
